--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,10 +4,11 @@ html {
 }
 
 body {
-  background-color: #282828;
-  font-family: "Poppins", sans-serif;
-  margin: 0 auto;
+  font-family: "Poppins", sans serif;
   max-width: 1120px;
+  margin: 0 auto;
+  background: linear-gradient(150deg, #000000, #9e00ff);
+  background-size: 120% 120%;
 }
 
 .cabecalho {
@@ -120,6 +121,8 @@ body {
 .home .foto.sombra-interna {
   /*sem espaço porque são 2 classe do mm elemento*/
   background: linear-gradient(to right, #8a35c8, #18c063, #00eea2);
+  background-size: 180% 180%;
+  animation: gradient-animation 5s ease infinite;
 }
 
 .projetos {
@@ -154,6 +157,7 @@ body {
 }
 
 .projetos .projeto img {
+  width: 100%;
   height: 100%;
 }
 
@@ -207,4 +211,18 @@ body {
 
 .projetos .btn-mostrar_mais.remover {
   display: none;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
